[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Alex_K <Kagan.alex23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.41.1"
seaborn = "^0.13.2"
plotly = "^5.24.1"
requests = "^2.32.3"
jason = "^0.1.7"
pandas = "^2.2.3"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
